# discord-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  REQUIREMENTS.md  deny.toml  docker-compose.yml  rustfmt.toml  shell.nix
.github/workflows/: docker.yml  release-binary.yml  release-docker.yml
src/: api.rs  data.rs  database.rs  environment.rs  events.rs  fuzzy.rs  main.rs  pagination.rs  utils.rs
src/api/: hero.rs  mod.rs  team.rs
src/commands/: hero.rs  id.rs  info.rs  leaderboard.rs  mod.rs  randomhero.rs  team.rs  teams.rs
src/utils/: calculate_latency.rs  embeds.rs  git.rs  mod.rs
