[package]
name = "discord-test-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features=["macros", "rt-multi-thread"] }
serenity = { version = "0.11.1"} 
serde = { version = "1.0.136", features=["derive"] }
dotenv = "0.15.0"
envy = "0.4.2"