[package]
name = "discord-test-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features=["macros", "rt-multi-thread"] }
serenity = { version = "0.11.1"} 
serde = { version = "1.0.136", features=["derive"] }
dotenvy = "0.15.5"
envy = "0.4.2"
reqwest = "0.11.12"
