[package]
name = "hacksquad-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, version = "0.11.1", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder"
] }
serde = { version = "1.0.136", features = ["derive"] }
dotenvy = "0.15.5"
envy = "0.4.2"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde_json = "1.0.85"
simsearch = "0.2"
redis = "0.21"
lazy_static = "1.4.0"
rand = "0.8.5"

[dependencies.openssl-sys]
version = "0.9.71"
features = ["vendored"]
